--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html dl><head>
 
-<title>TypeType</title>
+<title>艾影的信</title>
 
 <style>
 
@@ -284,7 +284,7 @@ padding:10px;
 
 <textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
 
-&lt;script src="http://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
+&lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
 
 
 
@@ -341,7 +341,7 @@ padding:10px;
 
 <script src="highlight.min.js"></script>
 
-<script src="http://www.jq22.com/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://www.jq22.com/jquery/2.1.1/jquery.min.js"></script>
 
 <script type="text/javascript" src="jquery.typetype.js"></script>
 
