--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ padding:10px;
 
 <textarea spellcheck="false" class="textarea" style="resize:none;"></textarea>
 
-<textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
+<textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
 
 &lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
 
