--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ $(function(){
     <!--.fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
     
     .typetype("\n\n谢谢你的帮忙，")
-    .typetype("\n\n很高兴认识你！cy。",{
+    .typetype("\n\n很高兴认识你！超燕。",{
 
       keypress:flashTextarea,
 
