--- a/index.html
+++ b/index.html
@@ -5,63 +5,45 @@
 <style>
 
 body {
-
   text-align:center;
-
   font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
-
   background:rgb(51,51,51);
-
   margin:0;
 
 }
 
+div::-webkit-scrollbar {
+	width:0.1px;
+}
+
 #header {
-
   position:absolute;
-
   width:100%;
-
   top:50%;margin-top:-210px;
-
   -webkit-transition:all 1s;
-
   transition:all 1s;
-
   opacity:0;
 
 }
 
 #header {
-
   margin-top:-270px;
-
   opacity:0.3;
-
 }
 
 #header:hover { <!--.reveal -->
-
   opacity:0.9;
-
   -webkit-transition:all 200ms;
-
   transition:all 200ms;
 
 }
 
 #header, #header a {
-
   height:40px;
-
   color:white;
-
   font-size:30px;
-
   text-decoration:none;
-
   font-family:'Helvetica Neue',Helvetica,sans-serif;
-
 }
 
 #header a:hover {
@@ -71,137 +53,84 @@ body {
 }
 
 #header iframe {
-
   position:absolute;
-
   top:0.3em;
-
   margin-lefT:0.5em;
 
 }
 
 .ta {
-
-position:absolute;
-
-right:50%;
-
-top:50%;
-
-margin-top:-210px;
-
-height:420px;
-
-width:620px;
-
-background:rgb(35,36,38);
-
-z-index:2;
-
--webkit-transition:all 1s, color 600ms, outline 50ms;
-
-transition:all 1s, color 600ms, outline 50ms;
-
-overflow:hidden;
+	position:absolute;
+	right:50%;
+	top:50%;
+	margin-top:-210px;
+	height:420px;
+	width:620px;
+	background:rgb(35,36,38);
+	z-index:2;
+	-webkit-transition:all 1s, color 600ms, outline 50ms;
+	transition:all 1s, color 600ms, outline 50ms;
+	overflow:hidden;
 
 }
 
 .textarea {
-
   display:block;
-
   background:none;
-
   height:400px;
-
   width:600px;
-
   padding:10px;
-
   color:rgb(236,236,236);
-
   font-size:130%;
-
 /*  border:1px solid rgb(171,202,243);*/
-
   border:0;
 
 }
 
 .textarea.dim {
-
-color:rgba(236,236,236,0.3);
-
+	color:rgba(236,236,236,0.3);
 }
 
 #rhs {
-
   display:block;
-
   position:absolute;
-
   left:50%;
-
   top:50%;
-
   margin-top:-210px;
-
   height:420px;
-
-  width:420px;
-
+  width:320px;
   background:rgba(230,230,230,1);
-
   white-space:pre;
-
   -webkit-transition:all 1s;
-
   -transition:all 1s;
-
   font-size:80%;
-
   overflow:hidden;
-
   text-overflow: ellipsis;
-
   text-align:left;
-
 }
 
 #rhs #code {
-
-height:400px;
-
-width:600px;
-
-padding:10px;
-
+  height:400px;
+  width:600px;
+  padding:10px;
   background:none !important;
-
 }
 
 .ta {
-
   margin-right:-310px;
 
 }
 
-/**#rhs {
-
+#rhs {
   margin-left:-210px;
-
-}**/
+}
 
 .reveal .ta, .reveal #rhs {
-
-  margin-right:0px;
-
-  margin-left:0px;
-
+  margin-right:-160px;
+  margin-left:160px;
 }
 
 #secondhalf {
-
   display:none;
 
 }
@@ -266,180 +195,123 @@ padding:10px;
 
 </head>
 
-<body>
+<body > <!--class="reveal"-->
+	<div id="header">
+	  <a style='display: block; text-align: center' href='https://xiaoaiying-i.github.io/aiyblog/'>
+		  from by  @aiyingi (查看博客)
+	  </a>
+	</div>
 
+	<div class="ta">
+		<textarea spellcheck="false" class="textarea" style="resize:none;"></textarea>
+		<textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
+		&lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
+	</div>
 
-
-<div id="header">
-
-  <a style='display: block; text-align: center' href='https://xiaoaiying-i.github.io/aiyblog/'>from by  @aiyingi (查看博客)</a>
-
-</div><!---->
-
-
-
-<div class="ta">
-
-<textarea spellcheck="false" class="textarea" style="resize:none;"></textarea>
-
-<textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
-
-&lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
-
-
-
-</div>
-
-
-
-<!--<div id="rhs">-->
-
-<div id="code">
-  <!--$('textarea').focus()
-
-  .typetype("Sometimes, it's really nice to simulate a human typing...", {
-
-    callback: function() {
-
-      <!--$('body').addClass('reveal')
-
-    }
-
-  }).delay(1500)
-
-  .typetype("\n\nThat's what this `typetype` jQuery plugin is for.")
-
-<span id="secondhalf">  .fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
-
-  .typetype("\n\nYou can make it fast... ",{
-
-    keypress:flashTextarea,
-
-    t:60,
-
-    e:0
-
-  })
-
-  .typetype("or slow and error-prone.", {
-
-    t:200,
-
-    e:0.2, // the default error rate is 0.04
-
-  })
-
-  .backspace(48)
-
-  .typetype("Try it out!")</span>-->
-
-</div>
-
-
-
-</div>
+	<div id="rhs" style="overflow:auto"><!---->
+	    <a id="a1" style='display: block; text-align: center'>letter1_您好</a>
+	    <a id="a2" style='display: block; text-align: center'>letter2_说点啥</a>
+	    
+		
+		<!--<div id="code">
+		
+		 $('textarea').focus()
+		  .typetype("Sometimes, it's really nice to simulate a human typing...", {
+			callback: function() {
+			  <!--$('body').addClass('reveal')
+			}
+		  }).delay(1500)
+		  .typetype("\n\nThat's what this `typetype` jQuery plugin is for.")
+		<span id="secondhalf">  .fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
+		  .typetype("\n\nYou can make it fast... ",{
+			keypress:flashTextarea,
+			t:60,
+			e:0
+		  })
+		  .typetype("or slow and error-prone.", {
+			t:200,
+			e:0.2, // the default error rate is 0.04
+		  })
+		  .backspace(48)
+		  .typetype("Try it out!")</span>
+		</div>-->
+	</div>
 
 <script src="highlight.min.js"></script>
-
 <script src="https://www.jq22.com/jquery/2.1.1/jquery.min.js"></script>
-
 <script type="text/javascript" src="jquery.typetype.js"></script>
-
 <script type="text/javascript">
+	function flashTextarea(){
+	  console.log('fl')
+	  //$('.ta').css({'outline':'1px solid rgba(255,255,0,0.7)'})
+	  //setTimeout(function(){
+	  //  $('.ta').css({'outline':'1px solid rgba(255,255,0,0)'})
+	  //},50)
 
-function flashTextarea(){
-
-  console.log('fl')
-
-  //$('.ta').css({'outline':'1px solid rgba(255,255,0,0.7)'})
-
-  //setTimeout(function(){
-
-  //  $('.ta').css({'outline':'1px solid rgba(255,255,0,0)'})
-
-  //},50)
-
-}
-
-
+	}
 
 $(function(){
+    $('body').addClass('reveal');
+    hello();
+	<!--第一封信-->
+	$("#a1").click(function(){
+	    $('.textarea').val("");
+		hello();
+	})
+	
+	<!--第二封信-->
+	$("#a2").click(function(){
+		$('.textarea').val("");
+		$('.textarea').focus()
+		.typetype("见到你很开心，")
+		.typetype("\n\n想跟你说说话的，可是由于不善言辞，不太清楚说点啥...")
+		.typetype("\n\n只能用这种方式给您留信了，")
+		.typetype("\n\n希望你可以看到。")
+		.typetype("\n\n顺祝：每天过得开心。")
+	})
 
-
-
-  hljs.configure({languages:['js']})
-
-  hljs.highlightBlock($('#code')[0])
-
-
-
+  //hljs.configure({languages:['js']})
+  //hljs.highlightBlock($('#code')[0])
   //$('#usage').click(function(){
-
   //  this.focus()
-
   //  this.select()
-
   //})
-
-
-
-
-
-  $('.textarea').focus()
-
-    .typetype("您好，我是符金辉，您唱歌好好听欸......", {
-
-      callback: function() {
-
-        <!--$('body').addClass('reveal')-->
-
-      }
-
-    }).delay(1000)
-
-    .typetype("\n\n冒昧打搅了，烦请原谅！")
-
-    <!--.fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
-    
-    .typetype("\n\n谢谢你的帮忙，")
-    .typetype("\n\n很高兴认识你！cy。",{
-
-      keypress:flashTextarea,
-
-      t:60,
-
-      e:0
-
-    })
+  
+  function hello(){
+	  $('.textarea').focus()
+		.typetype("您好，我是符金辉，您唱歌好好听欸......", {
+		  callback: function() {
+			<!--$('body').addClass('reveal')-->
+		  }
+		}).delay(500)
+		.typetype("\n\n冒昧打搅了，烦请原谅！")
+		<!--.fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
+		.typetype("\n\n谢谢你的帮忙，")
+		.typetype("\n\n很高兴认识你！cy。",{
+		  callback: function() {
+			<!--$('body').addClass('reveal')-->
+		  },
+		  keypress:flashTextarea,
+		  t:60,
+		  e:0
+		})
+  }
+  
 	
 
     <!--.typetype("or slow and error-prone.", {
-
     //  t:200,
-
     //  e:0.2, // the default error rate is 0.04
-
     //  callback: function(){
-
     //    $("#usage").addClass('show')
-
     //  }
-
     //})
-
     //.backspace(48)
-
     //.typetype("Try it out!")-->
-
-
-
 })
 
 </script>
 
-
-
 </body>
-
 </html>
 
