--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!doctype html><html dl><head>
+<!doctype html><html dl>
+
+<head>
 
 <title>艾影的信</title>
-
+<link rel="stylesheet" href="css/player.css">
 <style>
 
 body {
@@ -19,7 +21,7 @@ div::-webkit-scrollbar {
 #header {
   //position:absolute;
   width:100%;
-  padding-top:30px;
+  padding-top:20px;
   //top:50%;
   //margin-top:-210px;
   -webkit-transition:all 1s;
@@ -30,6 +32,7 @@ div::-webkit-scrollbar {
 
 #header {
   //margin-top:-270px;
+  margin-bottom:20px;
   opacity:0.3;
 }
 
@@ -63,8 +66,8 @@ div::-webkit-scrollbar {
 .ta {
 	position:absolute;
 	right:50%;
-	top:50%;
-	margin-top:-380px;
+	//top:50%;
+	//margin-top:-380px;
 	height:420px;
 	width:620px;
 	background:rgb(35,36,38);
@@ -96,8 +99,8 @@ div::-webkit-scrollbar {
   display:block;
   position:absolute;
   left:50%;
-  top:50%;
-  margin-top:-380px;
+  //top:50%;
+  //margin-top:-380px;
   height:420px;
   width:320px;
   background:rgba(230,230,230,1);
@@ -119,7 +122,6 @@ div::-webkit-scrollbar {
 
 .ta {
   margin-right:-310px;
-
 }
 
 #rhs {
@@ -131,68 +133,7 @@ div::-webkit-scrollbar {
   margin-left:160px;
 }
 
-#secondhalf {
-  display:none;
-
-}
-
-#usage {
-
-  position:absolute;
-
-  display:block;
-
-  border:0;
-
-  background:rgb(209,141,249);
-
-  background:#bdb;
-
-  color:#030;
-
-  z-index:3;
-
-  display:block;
-
-  bottom:-70px;
-
-  left:15px;
-
-  width:380px;
-
-  height:3em;
-
-  padding:5px;
-
-  overflow:scroll;
-
-  white-space:pre;
-
-  opacity:0;
-
-  -webkit-transition:bottom 1s, opacity 200ms;
-
-  transition:bottom 1s, opacity 200ms;
-
-  font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
-
-}
-
-#usage.show {
-
-  opacity:0.4;
-
-  bottom:15px;
-
-}
-
-#usage:hover {
-
-  opacity:1;
-
-}
-
-/* -----addClass----- */
+/*-----图片css-----*/
 #imgDiv {
   //height:400px;
   //width:920px;
@@ -205,7 +146,8 @@ div::-webkit-scrollbar {
   display:block;
   position:absolute;
   left:50%;
-  top:55%;
+  //top:55%;
+  top:960px;
   //margin-top:-10px;
   width:940px;
   //white-space:pre;
@@ -225,125 +167,6 @@ div::-webkit-scrollbar {
 }
 
 /*#imgDiv:hover img{display:none;}*/
-
-
-/*
-.border {
-    height: 369px;
-    width: 290px;
-    background: transparent;
-    border-radius: 10px;
-    transition: border 1s;
-    position: relative;
-}
- 
-.border:hover {
-    border: 1px solid #fff;
-}
- 
-.card {
-    height: 379px;
-    width: 300px;
-    background: #808080;
-    border-radius: 10px;
-    transition: background 0.8s;
-    overflow: hidden;
-    background: #000;
-    box-shadow: 0 70px 63px -60px #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
- 
-.card0 {
-    background: url("../img/1.jpg") center center no-repeat;
-    background-size: 300px;
-}
- 
-.card0:hover {
-    background: url("../img/1.jpg") left center no-repeat;
-    background-size: 600px;
-}
- 
-.card0:hover h2 {
-    opacity: 1;
-}
- 
-.card0:hover .fa {
-    opacity: 1;
-}
- 
-.card1 {
-    background: url("../img/2.jpg") center center no-repeat;
-    background-size: 300px;
-}
- 
-.card1:hover {
-    background: url("../img/2.jpg") left center no-repeat;
-    background-size: 600px;
-}
- 
-.card1:hover h2 {
-    opacity: 1;
-}
- 
-.card1:hover .fa {
-    opacity: 1;
-}
- 
-.card2 {
-    background: url("../img/3.jpg") center center no-repeat;
-    background-size: 300px;
-}
- 
-.card2:hover {
-    background: url("../img/3.jpg") left center no-repeat;
-    background-size: 600px;
-}
- 
-.card2:hover h2 {
-    opacity: 1;
-}
- 
-.card2:hover .fa {
-    opacity: 1;
-}
- 
-h2 {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #fff;
-    margin: 20px;
-    opacity: 0;
-    transition: opacity 1s;
-}
- 
-.fa {
-    opacity: 0;
-    transition: opacity 1s;
-}
- 
-.icons {
-    position: absolute;
-    fill: #fff;
-    color: #fff;
-    height: 130px;
-    top: 226px;
-    width: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-}
-*/
-
-.listitemimage{
-	transition:all 0.5s;
-}
-.listitemimage:hover{
-	transform:scale(1.1);
-}
 
 
 .info_container{/*卡片总div样式*/
@@ -406,6 +229,49 @@ h2 {
 .info_card:hover .fan {
 	transform: rotateY(0) rotateZ(0);
 }
+/*-----图片css-----*/
+
+/*-----随写css-----*/
+.suixie {
+	position:absolute;
+	left:50%;
+	top:520px;
+	//margin-top:-380px;
+	height:420px;
+	width:620px;
+	background:rgb(35,36,38);
+	z-index:2;
+	-webkit-transition:all 1s, color 600ms, outline 50ms;
+	transition:all 1s, color 600ms, outline 50ms;
+	overflow:hidden;
+    //margin-right:-310px;
+	margin-left:-140px;
+    margin-right:160px;
+}
+
+#suixielist {
+  display:block;
+  position:absolute;
+  right:50%;
+  top:520px;
+  //margin-top:-380px;
+  height:420px;
+  width:320px;
+  background:rgba(230,230,230,1);
+  white-space:pre;
+  -webkit-transition:all 1s;
+  -transition:all 1s;
+  font-size:80%;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  text-align:left;
+  
+  //margin-left:-210px;
+  //background:none !important;
+  margin-right:140px;
+  //margin-left:160px;
+}
+/*-----随写css-----*/
 
 </style>
 
@@ -420,13 +286,12 @@ h2 {
 	</div>
 
 	<div class="ta">
-		<textarea spellcheck="false" class="textarea" style="resize:none;"></textarea>
-		<textarea style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
+		<textarea id="letter-textarea" spellcheck="false" class="textarea" style="resize:none;"></textarea>
+		<textarea id="letter-textarea" style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
 		&lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;</textarea>
 	</div>
 
 	<div id="rhs" style="overflow:auto"><!---->
-	
 	    <a id="letter10" style='display: block; text-align: center'>letter10_相遇即幸运
 		<a id="letter10_all" style='display: block; text-align: center'>查看全文</a></a>
 		
@@ -456,84 +321,21 @@ h2 {
 		
 		<a id="letter1" style='display: block; text-align: center'>letter1_您好
 		<a id="letter1_all" style='display: block; text-align: center'>查看全文</a></a>
-	    
-		
-		<!--<div id="code">
-		
-		 $('textarea').focus()
-		  .typetype("Sometimes, it's really nice to simulate a human typing...", {
-			callback: function() {
-			  <!--$('body').addClass('reveal')
-			}
-		  }).delay(1500)
-		  .typetype("\n\nThat's what this `typetype` jQuery plugin is for.")
-		<span id="secondhalf">  .fadeTo(400,0.3).delay(1000).queue(function(){$('#secondhalf').fadeIn(1000);$('textarea').dequeue()}).delay(4000).fadeTo(400,1.0).delay(1000)
-		  .typetype("\n\nYou can make it fast... ",{
-			keypress:flashTextarea,
-			t:60,
-			e:0
-		  })
-		  .typetype("or slow and error-prone.", {
-			t:200,
-			e:0.2, // the default error rate is 0.04
-		  })
-		  .backspace(48)
-		  .typetype("Try it out!")</span>
-		</div>-->
+	</div>
+	
+	<div>
+		<div class="suixie" >
+			<textarea id="sx-textarea" spellcheck="false" readonly class="textarea" style="resize:none;"></textarea>
+			<textarea id="sx-textarea" style="resize:none;" id="usage" title="Just 578 bytes gzipped!" readonly spellcheck='off' wrap='off'>
+			&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript">&lt;/script&gt;
+			&lt;script src="https://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"&gt;&lt;/script&gt;
+			</textarea>
+		</div>
+		<div id="suixielist" style="overflow:auto"></div>
+			
 	</div>
 
 	<div id="imgDiv">
-	  <!--<div class="container">
-        <div class="card card0">
-            <div class="border">
-                <h2>Al Pacino</h2>
-                <div class="icons">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                </div>
-            </div>
-        </div>
-        <div class="card card1">
-            <div class="border">
-                <h2>Ben Stiller</h2>
-                <div class="icons">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                </div>
-            </div>class="imgAllDiv"
-        </div>
-		<div >
-			<div>
-				<image class="img" style="float:left;" src="./img/1.jpg"></image>
-				<p style="float:right;"></p>
-			</div>
-			<div class="listitemimage">
-				<a href="contentDetailed.html">
-					<img src="./img/1.jpg" />
-					<h5>这是简要标题</h5>
-					<p>这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容</p>
-				</a>
-			</div>
-			<div class="listitemimage">
-				<a href="contentDetailed.html">
-					<img src="./img/1.jpg" />
-					<h5>这是简要标题</h5>
-					<p>这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容</p>
-				</a>
-			</div>
-			<div class="listitemimage">
-				<a href="contentDetailed.html">
-					<img src="./img/1.jpg" />
-					<h5>这是简要标题</h5>
-					<p>这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容</p>
-				</a>
-			</div>
-		<div>-->
-		
 		<div class="info_container">
 			 <div class="info_card" style="height:280px; width:180px;"><!-- 一张卡片 -->
 				<div class="zh"><!-- 正面 -->
@@ -593,7 +395,7 @@ $(function(){
 	
 	function senMsg(letter){
 		var arr = letter.split('\n\n');
-		var ttfocus = $('.textarea').focus();
+		var ttfocus = $('#letter-textarea').focus();
 		let newArr = arr.forEach(function(item,index,arr){
 		    ttfocus.typetype(item + "\n\n")
 			//console.log(item)
@@ -606,12 +408,12 @@ $(function(){
 	        senMsg(letter)
 		}
 		$("#letter" + num).click(function(){
-			$('.textarea').val("");
+			$('#letter-textarea').val("");
 			senMsg(letter);
 		})
 		$("#letter"+ num +"_all").click(function(){
-			$('.textarea').val("");
-			$('.textarea').val(letter + "\n\n----end----\n\n\n\n");
+			$('#letter-textarea').val("");
+			$('#letter-textarea').val(letter + "\n\n----end----\n\n\n\n");
 		})
 	}
 	
@@ -691,30 +493,14 @@ $(function(){
 	\n\n遇见你就像生命照进了光。\
 	\n\n“让我偷偷看你，在你回眸的微风里，让我偷偷看你，在你离去的背影里。”\
 	\n\n--赵雷~让我偷偷看你';
-	$("#letter4").click(function(){
-		$('.textarea').val("");
-		senMsg(letter4);
-	})
-	$("#letter4_all").click(function(){
-	    $('.textarea').val("");
-		$('.textarea').val(letter4 + "\n\n----end----\n\n\n\n");
-	})
+	sendLetter(4, letter4);
 	
 	<!--第1封信-->
 	var letter1='您好，我是符金辉，您唱歌好好听欸......\
 	\n\n冒昧打搅了，烦请原谅！\
 	\n\n谢谢你的帮忙，\
 	\n\n很高兴认识你！cy。';
-	$("#letter1").click(function(){
-	    /*$('.textarea').val("");
-		hello();*/
-		$('.textarea').val("");
-		senMsg(letter1);
-	})
-	$("#letter1_all").click(function(){
-	    $('.textarea').val("");
-		$('.textarea').val(letter1 + "\n\n----end----\n\n\n\n");
-	})
+	sendLetter(1, letter1);
 	
 	<!--第2封信-->
 	var letter2='见到你很开心，\
@@ -722,21 +508,7 @@ $(function(){
 	\n\n只能用这种方式给您留信了，\
 	\n\n希望你可以看到。\
 	\n\n顺祝：每天过得开心。';
-	$("#letter2").click(function(){
-		/*$('.textarea').val("");
-		$('.textarea').focus()
-		.typetype("见到你很开心，")
-		.typetype("\n\n想跟你说说话的，可是由于不善言辞，不太清楚说点啥...")
-		.typetype("\n\n只能用这种方式给您留信了，")
-		.typetype("\n\n希望你可以看到。")
-		.typetype("\n\n顺祝：每天过得开心。")*/
-		$('.textarea').val("");
-		senMsg(letter2);
-	})
-	$("#letter2_all").click(function(){
-		$('.textarea').val("");
-		$('.textarea').val(letter2 + "\n\n----end----\n\n\n\n");
-	})
+	sendLetter(2, letter2);
 	
 	<!--第3封信-->
 	var letter3 = '今日天气：晴，气温25℃。宜多喝水，忌生气烦闷。\
@@ -746,32 +518,7 @@ $(function(){
 	\n\n说了点啥，猜测一下，期待一下。\
 	\n\n期待对生活来说是一种挺奇妙的感觉。\
 	\n\n顺祝：生活愉快，充满活力。';
-	$("#letter3").click(function(){
-		<!--$('.textarea').val("");
-		/*$('.textarea').focus()
-		.typetype("今日天气：晴，气温25℃。宜多喝水，忌生气烦闷。")
-		.typetype("\n\n当你在某一个瞬间想起这个地方，")
-		.typetype("\n\n或许可以再回来看看，")
-		.typetype("\n\n看看是不是又给你留信了，")
-		.typetype("\n\n说了点啥，猜测一下，期待一下。")
-		.typetype("\n\n期待对生活来说是一种挺奇妙的感觉。")
-		.typetype("\n\n顺祝：生活愉快，充满活力。")*/
-		
-		$('.textarea').val("");
-		senMsg(letter3);
-	})
-	$("#letter3_all").click(function(){
-		$('.textarea').val("");
-		$('.textarea').val(letter3 + "\n\n----end----\n\n\n\n");
-	})
-
-
-  //hljs.configure({languages:['js']})
-  //hljs.highlightBlock($('#code')[0])
-  //$('#usage').click(function(){
-  //  this.focus()
-  //  this.select()
-  //})
+	sendLetter(3, letter3);
   
   function hello(){
 	  $('.textarea').focus()
@@ -792,24 +539,121 @@ $(function(){
 		  e:0
 		})
   }
-  
-	
-
-    <!--.typetype("or slow and error-prone.", {
-    //  t:200,
-    //  e:0.2, // the default error rate is 0.04
-    //  callback: function(){
-    //    $("#usage").addClass('show')
-    //  }
-    //})
-    //.backspace(48)
-    //.typetype("Try it out!")-->
-	
-	// 进入默认信件
-	//senMsg(defLetter)
 	
 })
 
+</script>
+
+<!--music-->
+<div id="QPlayer">
+<div id="pContent">
+
+	<div id="player">
+		<span class="cover"></span>
+		<div class="ctrl">
+			<div class="musicTag marquee">
+				<strong>Title</strong>
+				 <span> - </span>
+				<span class="artist">Artist</span>
+			</div>
+			<div class="progress">
+				<div class="timer left">0:00</div>
+				<div class="contr">
+					<div class="rewind icon"></div>
+					<div class="playback icon"></div>
+					<div class="fastforward icon"></div>
+				</div>
+				<div class="right">
+					<div class="liebiao icon"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="ssBtn" style="background:#000 none repeat scroll 0% 0%">
+	        <div class="adf"></div>
+    </div>
+</div>
+<ol id="playlist"></ol>
+</div>
+
+<script src="./js/jquery.marquee.min.js"></script>
+
+<script>
+	var	playlist = [
+		{title:"起风了",artist:"买辣椒也用券",mp3:"https://m.hifini.com/music/起风了（旧版）.m4a",cover:"http://p2.music.126.net/c0nzSObvxF_DftayAJjXsw==/109951162864860506.jpg?param=130y130",},
+		{title:"One Last Kiss",artist:"宇多田ヒカル",mp3:"https://www.hifini.com/get_music.php?key=HEOQfF1FrIc4fjk8nQWIDFuUbZCJUcqxPWabLbjQqehjwaPOA8kbj0QVaHhePMBrGg",cover:"https://p1.music.126.net/iBApSj7JHCeFdO0W52EpZw==/109951165770552597.jpg?param=130y130",},
+		{title:"冷雨夜",artist:"Beyond",mp3:"https://www.hifini.com/get_music.php?key=RB/EKAkXr9M4fjk8nQWIDFuUbZCJUcqxPWabLbjQqehjwaPOA8kbjUgQa39Z",cover:"https://p1.music.126.net/25Um9AXuyzx2CK7t_h2WTA==/53876069773286.jpg?param=130y130",},
+		{title:"习惯失恋",artist:"容祖儿",mp3:"https://www.hifini.com/get_music.php?key=Rx+WLAgV/tU4fjk8nQWIDEHVc4rOV4vtJDuaN6bMqehjwaPeWp0Xzg1dNRxedIs0X5g/oKJ/omLiog1QXQ",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000003l02MY0vw8vs.jpg",},
+		{title:"野孩子",artist:"杨千嬅",mp3:"https://www.hifini.com/get_music.php?key=EkPEL1wVp4E4fjk8nQWIDEHVc4rOV4vtJDuaN6bMqehjwaPeWp0S+DlxagxddbU4eLk/oKJ/omLjqA9QX+s",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000001mImhQ4doM89.jpg",},
+		{title:"稀客",artist:"杨千嬅",mp3:"https://www.hifini.com/get_music.php?key=QxPHJFIVqdA4fjk8nQWIDFWOcZKDGtW2OHvWIbqS9fRiyPuYDpAVj0oRa3g",cover:"https://p2.music.126.net/8w4C39C2OY2fRANvkSXo9Q==/109951163270254519.jpg?param=130y130",},
+		{title:"黑夜中漫舞",artist:"陈奕迅",mp3:"https://ws.stream.qqmusic.qq.com/C400002YgLHD4frRWS.m4a?guid=13943538&vkey=34F6A9C33A10D35AD83E4F134AB3EF3C5279CC10968D7EB5BFCB3FD70CF745F1146672BB9A47E3FAA5FB047D38ACD630C4F2EEF355F2D48E&uin=626567678&fromtag=103032",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000004S8YQr3UmEbG.jpg",},
+		{title:"在路上",artist:"康小景",mp3:"./music/康小景在路上.ogg",cover:"https://y.qq.com/music/photo_new/T002R300x300M000002pzOKB0MXSDC_1.jpg?max_age=2592000",},
+	    {title:"南国之舞",artist:"梁翘柏",mp3:"https://www.hifini.com/get_music.php?key=FRCXJFMWqNc4fjk8nQWIDFWOcZKDGtW2OHvWIbqS9fRiyPuYDpAUhkgeanhbOA",cover:"https://p2.music.126.net/lHwwVluAutDy0FmpaslYiw==/5905476953005960.jpg?param=130y130",},
+	    {title:"弥敦道",artist:"洪卓立",mp3:"https://www.hifini.com/get_music.php?key=RkWQfl1EqoI4fjk8nQWIDEHVc4rOV4vtJDuaN6bMqehjwaPeWp0W8DRTEg9eYc0IWr0/oKJ/omLjrQJQUuA",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000000aMFTq0Ejfqb.jpg",},
+		
+	];
+  var isRotate = true;
+  var autoplay = false;
+  // {title:"",artist:"",mp3:"https://www.hifini.com/",cover:"",},
+</script>
+<script src="./js/player.js"></script>
+<script>
+
+function bgChange(){
+	var lis= $('.lib');
+	for(var i=0; i<lis.length; i+=2){
+	    lis[i].style.background = 'rgba(246, 246, 246, 0.7)';
+    }
+}
+window.onload = bgChange;
+</script>
+<!--music-->
+
+<script>
+var	sxlist = [
+	{title:"随想_难以到达的地方",content:"生活啊！多么的丰富多彩，\n饱含了人间的酸甜苦辣咸。\n我所向往的生活，\n那是一片金黄的麦田，\n那是一片翠绿的草地，\n那是一片湛蓝的天空。\n\n我有一个小房子，\n他就在那棵大榕树下。\n我有一个种满了花儿的小院子，\n我还有一只猫、一匹马儿。\n当夜晚到来，\n我抱着我的小猫，\n坐在小屋门前、大榕树底下，\n看见了那满天闪烁的繁星。\n\n我做了一个梦，\n梦见我骑着我的马儿在空旷的草原上狂奔，\n最后，我们在一条小溪边停了下来。\n马儿喝着水，\n我吹着迎面而来的徐徐清风，\n无比的快乐着。\n\n有一天，我那小院子里的花儿开了，\n它们就像一张张小脸在向着我微笑，\n我也无比幸福的笑了。\n我们就是这世间最美好的事物，\n像太阳的光――热烈，\n像月亮的光――皎洁，\n像星星的光――璀璨。\n我想这世间万物都已藏进了我的眸间。",},
+	{title:"随想_孤独之旅",content:"当有一天我背上我的行囊，\n离开了那生我养我的土地，\n这并不是我不热爱那家乡，\n而是我要去把那离家出走的灵魂找回。\n当有一天你发现我对那生活不在有所向往，\n这只是我在自我疗伤。\n\n如果生命的尽头没有我所追求的希望，\n那我是否还可以回头观望？\n美好的希望，\n总在那暴风骤雨的彩虹之上，\n所有的展望也都只不过是令自己遍体鳞伤。\n但我清楚的知道，\n就是最后满是失望，\n我也会无怨无悔、无惧无畏的向着那前方。\n\n生活的历练为我锻造铠甲，\n命运的苦难助我积极向上，\n我已重寻那力量之源，\n让我的精神领着我走向远方。\n我的身影开始变得高大，\n我也慢慢变得沧桑。",},
+	{title:"随想_故事",content:"\n可惜我并不勇敢，\n不然你和我的故事早已写满了厚厚的一沓笔记。\n如果能再给我一个重新开始的机会，\n我又会怎么做？\n\n我只是做了一个长长的梦，\n我一直都没有醒过来。\n等我打破了这幻境，\n我将会带着你离开。\n如果你问我要往哪里去，\n我会告诉你：\n去往那鲜花盛开、最接近理想的地方。\n\n当我们踏上了岁月这一趟列车，\n青春的站点会匆匆驶过，\n在时间的这条路上一直漂泊，\n哪里才能停歇，哪里才是我们的故乡，哪里才会是我们的最终归宿？\n我想，这一切都已经不再重要。\n因为，有你的地方也就是我最快乐的地方。\n\n我们就像结伴而行的一对候鸟，\n在冬天到来之前飞往我们的南方。\n为什么会迷失了方向？\n只因这一路上的风景太过于美丽。\n就让黎明的曙光为我们指引方向，\n冲破那黑暗的束缚，\n向着那温暖的地方。",},
+	{title:"随想_在周日死去",content:"\n贱卖时间，\n生命，只剩下这一个周日，\n生活，寂静的，落寞的，孤独的。\n谁将在这个周日死去，\n谁会沉沉的睡去，便不再醒来。",},
+	{title:"随想_分离",content:"在这阴暗的房子里，\n老鼠和蟑螂啃食着我的躯壳，\n窗外的小鸟为我哀鸣，\n地上的蚂蚁为我祷告。\n脱离而出的灵魂注视这一切，\n无力的在空气中消散。",},
+	{title:"杂思_1",content:"如果生活欺骗了我，\n我会感到无比庆幸，\n因为我还有那一丝值得欺骗的价值。\n如果生活把我欺骗得一无所有，\n那我仍要感到开心，\n因为再无任何可失去，\n剩下的便是获得。",},
+	{title:"杨慎_临江仙",content:"滚滚长江东逝水，浪花淘尽英雄。\n是非成败转头空。\n青山依旧在，几度夕阳红。\n\n白发渔樵江渚上，惯看秋月春风。\n一壶浊酒喜相逢。\n古今多少事，都付笑谈中。",},
+	
+	
+];
+
+//{title:"故事",content:"",},
+
+function catSxContent(itemIndex){
+    var item = sxlist[itemIndex];
+	//console.log("a-click");
+	//console.log(item);
+	$('#sx-textarea').val("");
+	$('#sx-textarea').val(item.title + "\n\n" +item.content);
+}
+
+function sxload(){
+	$('#sx-textarea').val("");
+	var lastitem = sxlist[sxlist.length-1];
+	if (lastitem != null && lastitem != "undefined"){
+	    $('#sx-textarea').val(lastitem.title + "\n\n" +lastitem.content);
+	}
+
+	for (var i = 0; i < sxlist.length; i++){
+		var item = sxlist[i];
+		$('#suixielist').append('</br><a id="sx'+(i+1)+'" onclick="catSxContent('+i+')" style="display: block; margin-left:30px;">'+item.title+'</a></br>');
+		/*$("#sx" + i).click(function(item){
+		    console.log("a-click");
+			console.log(item.content);
+			$('#sx-textarea').val("");
+			$('#sx-textarea').val(item.content);
+		})*/
+	}
+}
+
+
+
+window.onload = sxload;
 </script>
 
 </body>
