--- a/index.html
+++ b/index.html
@@ -847,10 +847,10 @@ function mPicLoad(){
 		//{title:"",src:"./img/pugonying.jpeg",content:"不以物喜，不以己悲",},
 		//{title:"",src:"./img/xiaoxrk.jpeg",content:"无言的爱",},
 		//{title:"",src:"./img/feiniao.jpeg",content:"像飞鸟一般，自由翱翔",},
-		{title:"",src:"https://img3.doubanio.com/view/subject/m/public/s1872653.jpg",content:"书：《明朝那些事》，作者：当年明月。\n临江仙·梦后楼台高锁 晏几道_宋\n梦后楼台高锁，酒醒帘幕低垂。去年春恨却来时。落花人独立，微雨燕双飞。\n记得小苹初见，两重心字罗衣。琵琶弦上说相思。当时明月在，曾照彩云归。",},
-		{title:"",src:"https://img3.doubanio.com/view/subject/m/public/s28857733.jpg",content:"书：《二十四史》。以铜为鉴,可以正衣冠,以人为鉴,可以知得失,以史为鉴,可以知兴替。",},
-		{title:"",src:"https://img3.doubanio.com/view/photo/s_ratio_poster/public/p452089833.webp",content:"电影：<末代皇帝 The Last Emperor‎ (1987)>。导演: 贝纳尔多·贝托鲁奇；编剧: 贝纳尔多·贝托鲁奇 / 马克·派普罗。",},
-		{title:"",src:"https://img1.doubanio.com/view/photo/s_ratio_poster/public/p2396871198.webp",content:"动画：<瑞克和莫蒂 Rick and Morty>。导演: 贾斯汀·罗兰；编剧: 贾斯汀·罗兰 / 丹·哈萌。",},
+		{title:"",src:"./img/pics/mingchaonaxieshi.jpg",content:"书：《明朝那些事》，作者：当年明月。\n临江仙·梦后楼台高锁 晏几道_宋\n梦后楼台高锁，酒醒帘幕低垂。去年春恨却来时。落花人独立，微雨燕双飞。\n记得小苹初见，两重心字罗衣。琵琶弦上说相思。当时明月在，曾照彩云归。",},
+		{title:"",src:"./img/pics/24shi.jpg",content:"书：《二十四史》。以铜为鉴,可以正衣冠,以人为鉴,可以知得失,以史为鉴,可以知兴替。",},
+		{title:"",src:"./img/pics/modaihuangdi.webp",content:"电影：<末代皇帝 The Last Emperor‎ (1987)>。导演: 贝纳尔多·贝托鲁奇；编剧: 贝纳尔多·贝托鲁奇 / 马克·派普罗。",},
+		{title:"",src:"./img/pics/ruikehemodi.webp",content:"动画：<瑞克和莫蒂 Rick and Morty>。导演: 贾斯汀·罗兰；编剧: 贾斯汀·罗兰 / 丹·哈萌。",},
 		
 	];
 	for (var i = 0; i < mPicList.length; i++){
