--- a/index.html
+++ b/index.html
@@ -851,6 +851,10 @@ function mPicLoad(){
 		{title:"",src:"./img/pics/24shi.jpg",content:"书：《二十四史》。以铜为鉴,可以正衣冠,以人为鉴,可以知得失,以史为鉴,可以知兴替。",},
 		{title:"",src:"./img/pics/modaihuangdi.webp",content:"电影：<末代皇帝 The Last Emperor‎ (1987)>。导演: 贝纳尔多·贝托鲁奇；编剧: 贝纳尔多·贝托鲁奇 / 马克·派普罗。",},
 		{title:"",src:"./img/pics/ruikehemodi.webp",content:"动画：<瑞克和莫蒂 Rick and Morty>。导演: 贾斯汀·罗兰；编剧: 贾斯汀·罗兰 / 丹·哈萌。",},
+		{title:"",src:"./img/pics/qinghuida1988.webp",content:"剧：《请回答1988》；成宝拉。",},
+		{title:"",src:"./img/pics/dongjingaiqinggushi.webp",content:"剧：《东京爱情故事》；赤名莉香。",},
+		{title:"",src:"./img/pics/halibote.webp",content:"电影：<Harry Potter哈利波特系列>；铁三角哈利、罗恩和赫敏",},
+		{title:"",src:"./img/pics/hanniba.webp",content:"剧：<Hannibal汉尼拔系列>；根据著名畅销小说《红龙》（Red Dragon）和同名电影改编",},
 		
 	];
 	for (var i = 0; i < mPicList.length; i++){
